--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "8009:8009"
     environment:
-      - TELEGRAM_BOT_TOKEN=1385532726:AAGnEUIJrEqHBTpafJt_8x31rjkEShTsrcY
-      - TELEGRAM_CHAT_ID=-494686843
+      - TELEGRAM_BOT_TOKEN=''
+      - TELEGRAM_CHAT_ID=''
       - PORT=8009
-      - AUTH_TOKEN = e2360e636184d429f52966a6a03fbf
+      - AUTH_TOKEN = ''
